[gd_scene load_steps=2 format=3 uid="uid://bwogjgbyjt3iy"]

[ext_resource type="Script" uid="uid://cwkoeo1bk6hml" path="res://screens/menu/identification.gd" id="1_6yiyv"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6yiyv")

[node name="VerticalLine" type="Line2D" parent="."]
position = Vector2(-17, 0)
points = PackedVector2Array(637, 36, 637, 720)

[node name="LblPlayAsGuest" type="Label" parent="."]
offset_top = 183.0
offset_right = 631.0
offset_bottom = 246.0
text = "Jugar como invitado"
horizontal_alignment = 1

[node name="GuestRectBorder" type="ColorRect" parent="LblPlayAsGuest"]
show_behind_parent = true
layout_mode = 0
offset_left = 205.0
offset_top = -22.0
offset_right = 419.0
offset_bottom = 52.0
color = Color(0.38977, 0, 0.0292614, 1)

[node name="GuestRect" type="ColorRect" parent="LblPlayAsGuest"]
show_behind_parent = true
layout_mode = 0
offset_left = 213.0
offset_top = -15.0
offset_right = 411.0
offset_bottom = 43.0
color = Color(0.853401, 0, 0.129171, 1)

[node name="GuestButton" type="Button" parent="LblPlayAsGuest"]
modulate = Color(0.854902, 0, 0.00392157, 0)
layout_mode = 0
offset_left = 220.0
offset_top = -15.0
offset_right = 409.0
offset_bottom = 43.0

[node name="LblAccountAcces" type="Label" parent="."]
offset_left = 665.0
offset_top = 174.0
offset_right = 1175.0
offset_bottom = 237.0
text = "Accede a tu cuenta"
horizontal_alignment = 1

[node name="AccountRectBorder" type="ColorRect" parent="LblAccountAcces"]
show_behind_parent = true
layout_mode = 0
offset_left = 158.0
offset_top = -22.0
offset_right = 349.0
offset_bottom = 49.0
color = Color(0.218056, 0.00040064, 0.561593, 1)

[node name="AccountRect" type="ColorRect" parent="LblAccountAcces"]
show_behind_parent = true
layout_mode = 0
offset_left = 165.0
offset_top = -16.0
offset_right = 342.0
offset_bottom = 42.0
color = Color(0.258814, 0.196818, 1, 1)

[node name="AccountButton" type="Button" parent="LblAccountAcces"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 166.0
offset_top = -16.0
offset_right = 343.0
offset_bottom = 42.0

[node name="TxtGuestUser" type="LineEdit" parent="."]
offset_left = 194.0
offset_top = 278.0
offset_right = 457.0
offset_bottom = 321.0
placeholder_text = "Nombre de usuario"

[node name="BtnConnectGuest" type="Button" parent="."]
offset_left = 239.0
offset_top = 508.0
offset_right = 407.0
offset_bottom = 562.0
text = "Conectar"

[node name="TxtAccountUser" type="LineEdit" parent="."]
offset_left = 789.0
offset_top = 285.0
offset_right = 1052.0
offset_bottom = 328.0
focus_neighbor_bottom = NodePath("../TxtPassword")
placeholder_text = "Nombre de Usuario o Mail"

[node name="TxtPassword" type="LineEdit" parent="."]
offset_left = 789.0
offset_top = 361.0
offset_right = 1052.0
offset_bottom = 404.0
focus_neighbor_top = NodePath("../TxtAccountUser")
placeholder_text = "Contraseña"

[node name="BtnCreateAccount" type="Button" parent="."]
offset_left = 935.0
offset_top = 477.0
offset_right = 1103.0
offset_bottom = 531.0
text = "Crear cuenta"

[node name="BtnConnectAccount" type="Button" parent="."]
offset_left = 725.0
offset_top = 476.0
offset_right = 893.0
offset_bottom = 530.0
text = "Conectar"

[node name="BtnPassword" type="Button" parent="."]
offset_left = 825.0
offset_top = 565.0
offset_right = 1006.0
offset_bottom = 619.0
text = "Recuperar Contraseña"

[node name="RectCoverGuest" type="ColorRect" parent="."]
offset_left = 169.0
offset_top = 247.0
offset_right = 475.0
offset_bottom = 582.0
color = Color(0.298039, 0.298039, 0.298039, 0.784314)

[node name="RectCoverAccount" type="ColorRect" parent="."]
offset_left = 697.0
offset_top = 262.0
offset_right = 1128.0
offset_bottom = 645.0
color = Color(0.298039, 0.298039, 0.298039, 0.784314)

[node name="ErrorMessageLength" type="Label" parent="."]
modulate = Color(0.980221, 0.30239, 0.267759, 1)
offset_left = 215.0
offset_top = 330.0
offset_right = 415.0
offset_bottom = 380.0
text = "Error: Invalid Username
From 1-8 characters"

[node name="ErrorMessageUsed" type="Label" parent="."]
modulate = Color(0.980221, 0.30239, 0.267759, 1)
offset_left = 215.0
offset_top = 330.0
offset_right = 415.0
offset_bottom = 380.0
text = "Error: Invalid Username
Username already in use"

[node name="ErrorMessageUserAccount" type="Label" parent="."]
modulate = Color(0.980392, 0.301961, 0.266667, 1)
offset_left = 795.0
offset_top = 330.0
offset_right = 1044.0
offset_bottom = 353.0
text = "Error: Invalid Username or Mail"

[node name="ErrorMessagePasswordAccount" type="Label" parent="."]
modulate = Color(0.980392, 0.301961, 0.266667, 1)
offset_left = 795.0
offset_top = 405.0
offset_right = 1039.0
offset_bottom = 428.0
text = "Error: Incorrect Password"

[connection signal="pressed" from="LblPlayAsGuest/GuestButton" to="." method="_on_boton_invitado_pressed"]
[connection signal="pressed" from="LblAccountAcces/AccountButton" to="." method="_on_boton_cuenta_pressed"]
[connection signal="pressed" from="BtnConnectGuest" to="." method="_on_btn_connect_guest_pressed"]
[connection signal="pressed" from="BtnCreateAccount" to="." method="_on_btn_create_account_pressed"]
[connection signal="pressed" from="BtnConnectAccount" to="." method="_on_btn_connect_account_pressed"]
[connection signal="pressed" from="BtnPassword" to="." method="_on_btn_password_pressed"]
